--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,12 @@ addons:
       - gsl
       - boost
       - libomp
+  apt:
+    packages:
+      - cmake
+      - gsl
+      - boost
+      - libomp
 script:
   - mkdir build
   - cd build
